--- a/css/quienessomos.css
+++ b/css/quienessomos.css
@@ -37,3 +37,10 @@ img {
     text-align: center;
     margin-bottom: 20px;
 }
+@media (min-width: 321px) and (max-width: 768px) {
+    .video-container{
+        height: 200px;
+        width: 330px;
+
+    }
+}
