--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,10 @@ h1 {
 .container-header nav ul li a:hover {
   color: #ffc107;
 }
+ul.list-group a {
+  text-decoration: none;
+  color: #000;
+}
 section h2 {
   background-color: #001f3f;
   padding: 10px;
