--- a/views/index.html
+++ b/views/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="../css/horarios.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link rel="stylesheet" type="text/css" href="styles.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="../js/mayor.js"></script>
     <script src="../js/carousel.js"></script>
@@ -65,12 +66,12 @@
                 <h2 class="text-center">Nuestros Productos</h2>
                 <p class="text-center">¡¡Aprovecha estos precios!! ideales para estudiantes</p>
                 <ul class="list-group mx-auto" style="max-width: 300px;">
-                    <li class="list-group-item">Biblioratos y Carpetas</li>
-                    <li class="list-group-item">Cuadernillos económicos</li>
-                    <li class="list-group-item">Abrochadoras</li>
-                    <li class="list-group-item">Perforadora</li>
-                    <li class="list-group-item">Resmas</li>
-                    <li class="list-group-item">Resaltadores</li>
+                    <li class="list-group-item"> <a href="./biblioratosycarpetas.html">Biblioratos y Carpetas</li></a>
+                    <li class="list-group-item"> <a href="./cuadrenillos.html"> Cuadernillos económicos</li></a>
+                    <li class="list-group-item"> <a href="./abrochadoras.html"> Abrochadoras</li></a>
+                    <li class="list-group-item"> <a href="./perforadora.html"> Perforadoras</li></a>
+                    <li class="list-group-item"> <a href="./resmas.html"> Resmas</li></a>
+                    <li class="list-group-item"> <a href="./resaltadores.html"> Resaltadores</li></a>
                 </ul>
                 <h2 class="text-center mt-4">Ubicación</h2>
                 <h3 class="text-center">Nos encontramos en:</h3>
